Fix openapi and re-generate code.
