# openapi/openapi.yaml
@@ -13,10 +13,7 @@ paths:
       operationId: signup
       requestBody:
         required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SignupRequest'
+        $ref: '#/components/requestBodies/SignupRequest'
       responses:
         201:
           description: Succesfully signed up (created) a new user
@@ -85,19 +82,11 @@ paths:
       operationId: login
       requestBody:
         required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/LoginRequest'
+        $ref: '#/components/requestBodies/LoginRequest'
 
       responses:
         200:
-          description: Submitted credentials are valid and response contains
-            a JWT access token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LoginResponse'
+          $ref: '#/components/responses/LoginResponse'
         401:
           description: User submitted invalid credentials
           content:
@@ -114,94 +103,16 @@ paths:
             
 components:
   schemas:
-    SignupRequest:
-      type: object
-      description: Request body for signing up new user
-      properties:
-        username:
-          type: string
-          description: Username with which new user account will be
-            identified in the system
-          maxLength: 30
-          minLength: 3
-          example: Nesquiko12
-          pattern: ^(?=[a-zA-Z0-9]{3,30}$).*
-          x-oapi-codegen-extra-tags:
-            validate: required
-        email:
-          type: string
-          description: Email address of a new user account
-          maxLength: 320
-          pattern: ^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$
-          example: foo@bar.foo.com
-          x-oapi-codegen-extra-tags:
-            validate: required
-        password:
-          type: string
-          description: Password for getting access to the new user account
-          maxLength: 32
-          minLength: 6
-          pattern: ^((?=\S*?[A-Z])(?=\S*?[a-z])(?=\S*?[0-9]).{6,32})\S$
-          example: mySecretPassword123
-          x-oapi-codegen-extra-tags:
-            validate: required
-      additionalProperties: false
-      required:
-        - username
-        - email
-        - password
-
-    LoginRequest:
-      type: object
-      properties:
-        username:
-          type: string
-          description: Username of an user account
-          maxLength: 30
-          minLength: 3
-          example: Nesquiko12
-          pattern: ^(?=[a-zA-Z0-9]{3,30}$).*
-          x-oapi-codegen-extra-tags:
-            validate: required
-        password:
-          type: string
-          description: Password of an user account
-          maxLength: 32
-          minLength: 6
-          pattern: ^((?=\S*?[A-Z])(?=\S*?[a-z])(?=\S*?[0-9]).{6,32})\S$
-          example: mySecretPassword123
-          x-oapi-codegen-extra-tags:
-            validate: required
-      additionalProperties: false
-      required:
-        - username
-        - password
-
-    LoginResponse:
-      type: object
-      properties:
-        access_token:
-          type: string
-          description: A JWT access token generated for this login session
-          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
-      additionalProperties: false
-      required:
-        - access_token
-
 
     ProblemDetails:
       type: object
       description: A problem details response, which occured during processing
-        of a request
+        of a request. (Trying to adhere to RFC 7807)
       properties:
         status_code:
           type: integer
           description: A http status code describing a problem
           example: 500
-        type:
-          type: string
-          description: An URI for identifiyng problem type
-          example: email.already_registered
         title:
           type: string
           description: A short, human-readable summary of the problem type
@@ -211,10 +122,14 @@ components:
           description: Human-readable explanation specific to this
             occurrence of the problem
           example: Entered email address 'foo@bar.com' is already used
+        instance:
+          type: string
+          description: A URI reference that identifies the specific
+            occurrence of the problem
+          example: /login
       additionalProperties: false
       required:
         - status_code
-        - type
         - title
         - detail
         - instance
@@ -300,7 +215,7 @@ components:
           schema:
             type: object
             properties:
-              secret: 
+              qrURI: 
                 type: string
             additionalProperties: false
             required:
